antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__workflow_agent_status_with_phase.snap
---
source: tui/src/chatwidget/tests/workflows.rs
assertion_line: 110
expression: "render_bottom_popup(&chat, 96)"
---
• Workflow: agents 3/5 · done (0s • esc to interrupt)
  └ Repositories 6-10: alpha, beta, gamma, delta, epsilon [5/42]


 ┃ Ask Antex to do anything

  gpt-5.6-sol default · /tmp/project
