antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__workflow_model_picker.snap
---
source: tui/src/chatwidget/tests/workflows.rs
assertion_line: 155
expression: "render_bottom_popup(&chat, 90)"
---
  Demo · 1/1 · Model


  Search models
› Use current Antex model  gpt-5.4
  gpt-5.4                  gpt-5.4 description
  gpt-5.2                  gpt-5.2 description

  Press enter to confirm or esc to go back
