antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__workflow_picker.snap
---
source: tui/src/chatwidget/tests/workflows.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
  Python workflows
  Project .codex/workflows overrides ~/.antex/workflows and built-ins

  Search workflows
› GitHub bot PR maintenance  built-in · Review or safely merge bot pull
                             requests across owned GitHub repositories.
  Ruff cleanup               built-in · Fix a large Ruff backlog in small
                             agent batches.

  Press enter to confirm or esc to go back
