antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__worktrees_command_remote.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: popup
---
 ┃ /workt

  gpt-5.6-sol default · /tmp/project
